Adding github pages deployment options

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "networks",
+  "homepage": "http://alexandreLamarre.github.io/Network-Algorithm-Visualization",
+  "name": "Network-Algorith-Visualization",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,8 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ghpages": "0.0.10"
   }
 }
