--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "three": "^0.120.1"
   },
   "scripts": {
     "predeploy": "npm run build",
