--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "homepage": "http://alexandreLamarre.github.io/Network-Analysis-Visualization",
-  "name": "Network-Algorith-Visualization",
+  "name": "Network-Algorithm-Visualization",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ionic/react": "^5.5.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,8 +12,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "three": "^0.120.1"
+    "three": "^0.126.1"
   },
   "scripts": {
     "predeploy": "npm run build",
