--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-modal": "^3.11.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "three": "^0.126.1"
+    "three": "^0.126.1",
+    "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
